criação das sessões e mudança do nome do html

--- a/modelos.html
+++ b/modelos.html
@@ -21,6 +21,17 @@
 </head>
 
 <body class="bg2">
-    
+    <header></header>
+
+    <main>
+        <section id="modelos">
+          <a href="#"></a>
+        </section>
+        <section id=""></section>
+     </main>
+
+    <footer></footer>
+
+
 
 </body>
